# urc-electrical-2023

./: .gitattributes  Makefile  README.md  build.ts  generate.sh  install.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  test.js  tsconfig.json
.github/workflows/: deploy-docs.yml
CommunicationPower/: Documentation.md
Communications Power/: Documentation.md
Drill/: Documentation.md
docs/: Drive.md  index.md
docs/Arm Breakout/: Datasheet.md  Schematic REV A.md  Schematic.md
docs/Arm System Controller/: Schematic.md
docs/Buck/: Datasheet.md  Schematic.md
docs/CommunicationPower/: Documentation.md
docs/Drill/: Documentation.md
docs/Drive/: Documentation.md  Schematic.md
docs/LPC4078 MicroMod/: Schematic.md
