[tool.poetry]
name = "urc-electrical-2023"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.7"
mkdocs-material = "^9.5.9"
mkdocs-macros-plugin = "^1.0.5"
mike = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

